Prevent loading layout shift.

--- a/assets/sass/components/analytics-4/_googlesitekit-analytics-settings-module.scss
+++ b/assets/sass/components/analytics-4/_googlesitekit-analytics-settings-module.scss
@@ -82,6 +82,7 @@
 		.googlesitekit-settings-enhanced-measurement-enabled {
 			display: flex;
 			gap: 6px;
+			margin-top: 1px;
 		}
 
 		.googlesitekit-settings-enhanced-measurement-enabled-icon {
