--- a/assets/sass/components/settings/_googlesitekit-settings-group.scss
+++ b/assets/sass/components/settings/_googlesitekit-settings-group.scss
@@ -41,6 +41,10 @@
 			margin: 6px 0 0 42px; // margin-left = 32px switch width + 10px margin-left of label.
 		}
 
+		.googlesitekit-analytics-enable-enhanced-measurement--loading {
+			padding-top: 11px;
+		}
+
 		.googlesitekit-analytics-enable-enhanced-measurement__progress--settings-edit {
 			margin-bottom: 12px;
 		}
